fixed bugs with visibility and bg image

--- a/src/App.css
+++ b/src/App.css
@@ -190,14 +190,19 @@ html, body {
   }
 }
 
+
 .header {
-  background-color: #1f1f1f;
+  background-color: #151416;
+  border-bottom:2px solid #666666;
   margin: 0px;
-  min-height: 80px;
-  max-height: 80px;
+  min-height: 60px;
+  max-height: 60px;
   display: flex;
   flex: row;
   justify-content: space-between;
+  flex-shrink: 0;
+  position: sticky;
+  top: 0;
 }
 
 .header-sec {
